--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "ropose/thirdparty/yolov3"]
 	path = ropose/thirdparty/yolov3
 	url = https://github.com/ultralytics/yolov3.git
+[submodule "ropose/thirdparty/human-pose-estimation.pytorch"]
+	path = ropose/thirdparty/human-pose-estimation.pytorch
+	url = https://github.com/microsoft/human-pose-estimation.pytorch.git
