--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,73 @@
-absl-py==0.7.1
+absl-py==1.2.0
 astor==0.8.0
+astunparse==1.6.3
+cachetools==5.2.0
+certifi==2022.6.15
+charset-normalizer==2.1.1
 cycler==0.10.0
-Cython==0.29.10
 decorator==4.4.0
+easydict==1.9
+flatbuffers==1.12
+fonttools==4.37.1
 gast==0.2.2
-grpcio==1.21.1
-h5py==2.9.0
+google-auth==2.11.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.48.1
+h5py==3.7.0
+idna==3.3
 imageio==2.5.0
+imagesize==1.4.1
+imgaug==0.4.0
+keras==2.9.0
 Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
+Keras-Preprocessing==1.1.2
 kiwisolver==1.1.0
+libclang==14.0.6
 Markdown==3.1.1
+MarkupSafe==2.1.1
 matplotlib==3.1.0
 mock==3.0.5
 networkx==2.3
-numpy==1.16.4
-opencv-python==4.1.0.25
+numpy==1.23.2
+oauthlib==3.2.0
+opencv-python==4.6.0.66
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.4.4
 Pillow==6.0.0
-protobuf==3.8.0
-pycocotools==2.0.0
+protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycocotools==2.0.4
 pyparsing==2.4.0
 python-dateutil==2.8.0
-PyWavelets==1.0.3
-scikit-image==0.15.0
-scipy==1.3.0
+pytz==2022.2.1
+PyWavelets==1.3.0
+PyYAML==6.0
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-image==0.19.3
+scipy==1.9.1
+seaborn==0.11.2
+Shapely==1.8.4
 simplejson==3.16.0
 six==1.12.0
-tensorboard==1.13.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
-tensorflow-gpu==1.13.1
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.2
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
 termcolor==1.1.0
-torch==1.1.0
+tifffile==2022.8.12
+torch==1.12.1
 torchsummary==1.5.1
-torchvision==0.3.0
+torchvision==0.13.1
 tqdm==4.32.1
 transforms3d==0.3.1
-Werkzeug==0.15.4
+typing_extensions==4.3.0
+urllib3==1.26.12
+Werkzeug==2.2.2
+wrapt==1.14.1
